--- a/Hejkal/Hejkal.csproj
+++ b/Hejkal/Hejkal.csproj
@@ -15,11 +15,11 @@
 		<ApplicationTitle>Hejkal</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.hejkal</ApplicationId>
+		<ApplicationId>com.kaspi.hejkal</ApplicationId>
 		<ApplicationIdGuid>C2D2C1D7-6BF9-423A-9C19-AB787463F7C9</ApplicationIdGuid>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>0.5</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
@@ -46,6 +46,14 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="AppShell.xaml.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Remove="AppShell.xaml" />
 	</ItemGroup>
 
 </Project>
