add test project

--- a/Hejkal/Hejkal.csproj
+++ b/Hejkal/Hejkal.csproj
@@ -65,4 +65,8 @@
 	  <MauiXaml Remove="AppShell.xaml" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Core\Core.csproj" />
+	</ItemGroup>
+
 </Project>
